--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,8 @@
   path = MATH_5620
   url = git@github.com:kylehovey/MATH_5620.git
   branch = gh-pages
+
+[submodule "blog"]
+  path = blog
+  url = git@github.com:kylehovey/blog.git
+  branch = gh-pages
